app/components/primer/open_project/border_box/collapsible_header.pcss
/* CSS for BorderBox::CollapsibleHeader  */

.CollapsibleHeader {
  display: block;
  container-name: collapsible-header-container;
  container-type: inline-size;
}

.Box:has(.CollapsibleHeader--collapsed) {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  border-bottom-width: var(--borderWidth-thicker);

  & .Box-list,
  & .Box-body,
  & .Box-footer {
    display: none;
  }
}

.CollapsibleHeader-triggerArea {
  cursor: pointer;
  user-select: none;
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  column-gap: var(--stack-gap-normal);
  row-gap: var(--base-size-4);

  .CollapsibleHeader > & {
    flex: 1;
  }
}

@container collapsible-header-container (width < 544px) {
  .CollapsibleHeader-triggerArea {
    flex-direction: column;
    align-items: flex-start;
  }

  .CollapsibleHeader[data-collapsed] .CollapsibleHeader-description {
    display: none;
  }

  .CollapsibleHeader-description {
    width: 100%;
  }
}

.CollapsibleHeader--multi-line {
  .CollapsibleHeader-triggerArea {
    flex-direction: column;
    align-items: flex-start;
  }

  &.CollapsibleHeader[data-collapsed] .CollapsibleHeader-description {
    display: none;
  }

  .CollapsibleHeader-description {
    overflow: visible;
    text-overflow: initial;
    white-space: normal;
    width: 100%;
  }
}

.CollapsibleHeader-title-line {
  display: flex;
  align-items: center;
  gap: var(--stack-gap-condensed);
  min-width: fit-content;
}

.CollapsibleHeader-description {
  flex: 1;
  min-width: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  user-select: text;
}

